updating my repo with dave's stuff

--- a/server-tutorial.html
+++ b/server-tutorial.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
+
+
+<script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js">
+</script>
 </head>
 
 <body>
@@ -105,13 +108,17 @@
         Other possible features you might want to consider adding to your app are
         a persistent message history, private messages between users, and word filtering
         functions. Incorporating JSON into your code will allow you to package more
-        information in every message beyond simple strings.
+        information in every message beyond simple strings. Be sure to be vigilant with committing to git.
+        This code can be run in Node through the terminal, and can be accessed at ws://localhost:3000.
+        3000 is the port that was assigned in the code used created in this tutorial, different port numbers can be utilized.
 
       </span>
 
     </div>
 
-  </div>
 
+
+
+  </div>
 </body>
 </html>
