--- a/server-tutorial.html
+++ b/server-tutorial.html
@@ -23,62 +23,78 @@
       <span>
         A websocket server can receive and send data among multiple clients, and
         is necessary to host your chat app. The purpose of this server is to
-        relay messages,  This code will require several crucial lines of code,
+        relay messages between users.  This section will detail the crucial lines of code,
         but additional features can be added to make your chat app more robust.
-        First, the ws module must be required.
-      <pre class="prettyprint">
-        var WebSocket = require("ws").Server;
-        var chatServer = new WebSocket({port:3000});
-      </pre>
-        Note that the Server method is necessary when requiring ws for the
-        purpose of creating a server. A port number of your choice should be
-        declared, but it must consistent across future code in order for the
-        server and clients to interact.
 
-        An empty array should be created to track clients connecting to the
+        1. First, the ws module must be required.
+
+        <pre class="prettyprint">
+
+            // Note that the Server method is necessary when requiring ws as a server.
+          var WebSocket = require("ws").Server;
+            // A port number of your choice should be declared
+          var chatServer = new WebSocket({port:3000});
+
+        </pre>
+
+        You may choose any port number you find suitable, but be sure it is consistent across future client code in order for the server and clients to interact.
+
+        2. An empty array should be created to track clients connecting to the
         server. This will allow the server to send information to multiple
         clients at once.
-      <pre class="prettyprint">
-        var users = [];
-      </pre>
-        Event listeners are added to the server in order to define how it
+
+        <pre class="prettyprint">
+          var users = [];
+        </pre>
+
+        3. Event listeners are added to the server in order to define how it
         handles connections and messages.
 
-      <pre class="prettyprint">
-        chatServer.on("connection" , function(ws){
-          console.log("connection");
-          users.push(ws);
-        }
-      </pre>
+        <pre class="prettyprint">
+            // the .on method adds the event listener , connection is the type of even being listened for.
+          chatServer.on("connection" , function(ws){
+            console.log("connection");
+            users.push(ws);
+          }
+        </pre>
+
         The above code adds every connecting client to the users array, and
-        console logs a simple message that will help you monitor /test
-        functionality. Nested within the above function, you must also add
+        console logs a simple message that will help you monitor/test
+        functionality.
+
+        4. Nested within the above function, you must also add
         event listeners to the clients, which are defined above by the ws parameter.
 
-      <pre class="prettyprint">
+        <pre class="prettyprint">
+
+            // ws is the parameter we declared when we added an event listener to the server.
           ws.on("message" , function(msg){
             console.log(msg);
+              // .send , as one would expect, is the the method that actually sends data
             users.forEach(function(usr){usr.send(msg)});
           })
-      </pre>
+
+        </pre>
+
         Every time there is a message event, the above code will log that
         message on the server console, and send the message to every user in the
         users array, including the original sender.
 
-        This next step is virtually essential. In the event a client disconnects,
+        5. This next step is virtually essential. In the event a client disconnects,
         any attempt the server makes to send a message will cause it to crash.
         We must add another event listener to the client that will remove it
         from the users array on a close event.
 
-      <pre class="prettyprint">
+        <pre class="prettyprint">
           ws.on("close" , function(){
-              var clientIndex = users.indexOf(ws);
-              users.splice(clientIndex,1);
-              console.log("a client has disconnected");
+            var clientIndex = users.indexOf(ws);
+            users.splice(clientIndex,1);
+            console.log("a client has disconnected");
           })
-      </pre>
-        Every time a client disconnects, the above code finds the index of that
-        client with the users array, and then deletes their information from the
+        </pre>
+
+        On every client “close” event, the above code finds the index of that
+        client within the users array, and then deletes tthem from the
         array. This code in its current state is completely usable for the purpose
         of serving a simple chat app.
 
@@ -109,9 +125,8 @@
         a persistent message history, private messages between users, and word filtering
         functions. Incorporating JSON into your code will allow you to package more
         information in every message beyond simple strings. Be sure to be vigilant with committing to git.
-        This code can be run in Node through the terminal, and can be accessed at ws://localhost:3000.
-        3000 is the port that was assigned in the code used created in this tutorial, different port numbers can be utilized.
-
+        This server code can be run in Node through the terminal, and can be accessed at ws://localhost:3000 .
+        3000 is the port that was assigned in the code used created in this tutorial, once again, different port numbers can be utilized.
       </span>
 
     </div>
